# bicgl

./: .cvsignore  BICGLConfig.cmake.in  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile.include  README  config.h.cmake
Documentation/: Changes.list  Changes.list,v
GLUT_windows/: Makefile  copy_x_colours.c  g.c  glut_windows.c  print_X_colours.c
GLUT_windows/Include/: WS_graphics.h  glut_window_prototypes.h
GLX_windows/: Makefile  glx_windows.c  glx_windows.c.new  note.txt  stored_font.c
GLX_windows/Include/: WS_windows.h  glx_window_prototypes.h
G_graphics/: Makefile  draw.c  draw_objects.c  draw_polygons.include.c  draw_quadmesh.include.c  event_loop.c  events.c  graphics_structs.c  lights.c  random_order.c  render.c  view.c  windows.c
Include/: GS_graphics.h  graphics.h  graphics_base.h  graphics_info.h  graphics_prototypes.h  graphics_struct.h  window_events.h
Include/GL/: freeglut_std.h  glut.h
IrisGL_graphics/: colour_def.c  draw.c  event_loop.c  events.c  lights.c  note.txt  render.c  view.c  windows.c
IrisGL_graphics/Include/: GS_graphics.h  def_gl.h  irisgl_graphics_prototypes.h
OpenGL_graphics/: Makefile  Makefile.objects  colour_def.c  draw.c  event_loop.c  events.c  lights.c  render.c  view.c  windows.c
OpenGL_graphics/Include/: GS_graphics.h  opengl_graphics_prototypes.h
Testing/: CMakeLists.txt  Makefile  add_text_to_pixmap.c  buffers.c  debug.c  example_graphics.c  film_loop.c  glut_windows.c  new_test_graphics.c  o_windows.c  tca.map  test.c  test_colour_map.c  test_colour_map_mode.c  test_colours.c  test_gl.c  test_graphics.c  test_graphics.mesa  test_minc.c  test_overlays.c  test_pixels.c  test_polygons.c  test_pretend.c  test_read.c  test_rgb_volume.c  test_viewport.c  test_volume.c  test_volume_colour_map.c  two_windows.c  windows.c
X_windows/: Makefile  test_x_windows.c  x_draw.c  x_windows.c
X_windows/Include/: x_window_prototypes.h  x_windows.h
