INCLUDE_DIRECTORIES( ${GLUT_INCLUDE_DIR}  )

IF(LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)
  LINK_LIBRARIES(bicgl ${GLUT_LIBRARIES} ${OPENGL_gl_LIBRARY}
      ${BICPL_STATIC_LIBRARIES}  ${LIBMINC_STATIC_LIBRARIES} )

ELSE(LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)
  LINK_LIBRARIES(bicgl ${GLUT_LIBRARIES} ${OPENGL_gl_LIBRARY}
      ${BICPL_LIBRARIES} ${LIBMINC_LIBRARIES} )
ENDIF(LIBMINC_STATIC_LIBRARIES AND BICPL_STATIC_LIBRARIES)


ADD_EXECUTABLE(test_read test_read.c)

ADD_TEST(NAME test_read COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_read )


